CDR-380 Fix Resource loading